# show-in-terminal

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h
src/: console_screen.c  console_screen.h  images.c  images.h  utils.c  utils.h
